force-app/main/default/objects/OW_task_information__c/OW_task_information__c.object-meta.xml
<CustomObject>
    <description>This object stores reference data related to tasks carried out by people across Octopus Wealth. In addition to a description of how to perform the task, there is useful information stored like which team performs it, whether the task is active, and which part of the process it falls under.</description>
    <label>Task Information</label>
    <nameField>
        <label>Task Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>