force-app/main/default/objects/OW_task_information__c/fields/OW_assigned_to__c.field-meta.xml
<CustomField>
    <fullName>OW_assigned_to__c</fullName>
    <description>The team that this task is normally completed by.</description>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OW_team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Case owner</fullName>
            </value>
            <value>
                <fullName>Chosen user</fullName>
            </value>
            <value>
                <fullName>Dedicated specialist/household team</fullName>
            </value>
            <value>
                <fullName>Household team</fullName>
            </value>
            <value>
                <fullName>Opportunity owner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Specific user</fullName>
            </value>
            <value>
                <fullName>Suitability planner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>