force-app/main/default/objects/OW_task_information__c/fields/OW_due_date__c.field-meta.xml
<CustomField>
    <fullName>OW_due_date__c</fullName>
    <description>A description of when this task is due, in relation to its creation (eg, due immediately, due 7 days later, etc).</description>
    <label>Due date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>