force-app/main/default/objects/OW_task_information__c/fields/OW_location__c.field-meta.xml
<CustomField>
    <fullName>OW_location__c</fullName>
    <description>To be completed by an administrator, this is where the task is used in Salesforce automation - e.g. in x process builder, y flow, z apex trigger</description>
    <inlineHelpText>To be completed by an administrator, this is where the task is used in Salesforce automation.</inlineHelpText>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>