force-app/main/default/objects/OW_task_information__c/fields/OW_process_variant__c.field-meta.xml
<CustomField>
    <fullName>OW_process_variant__c</fullName>
    <description>Describes whether this task is part of an old or new process (eg old factfind or new profile).</description>
    <label>Process Variant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OW_team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy Wealth Management</fullName>
            </value>
            <value>
                <fullName>Current Wealth Management Process</fullName>
            </value>
            <value>
                <fullName>New customer</fullName>
            </value>
            <value>
                <fullName>Annual review</fullName>
            </value>
            <value>
                <fullName>Tax year end</fullName>
            </value>
            <value>
                <fullName>Follow on advice</fullName>
            </value>
            <value>
                <fullName>Nurture lead</fullName>
            </value>
            <value>
                <fullName>Manage opportunity</fullName>
            </value>
            <value>
                <fullName>Manage application</fullName>
            </value>
            <value>
                <fullName>Employee onboarding</fullName>
            </value>
            <value>
                <fullName>Junior Policy Holder Turning 18</fullName>
            </value>
            <value>
                <fullName>Customer support</fullName>
            </value>
            <value>
                <fullName>Protection advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>