force-app/main/default/objects/OW_task_information__c/fields/OW_queue__c.field-meta.xml
<CustomField>
    <fullName>OW_queue__c</fullName>
    <description>The queue to which tasks of this type should be assigned.</description>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OW_team__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>OW_queues</valueSetName>
    </valueSet>
</CustomField>