force-app/main/default/objects/OW_task_information__c/fields/OW_requires_4eye__c.field-meta.xml
<CustomField>
    <fullName>OW_requires_4eye__c</fullName>
    <description>Indicates whether this specific task needs a 4eye check before it can be completed.</description>
    <label>Requires 4eye?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Dependent on experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>