force-app/main/default/objects/OW_task_information__c/fields/OW_sequence__c.field-meta.xml
<CustomField>
    <fullName>OW_sequence__c</fullName>
    <description>Used to allow ordering and grouping of tasks using relative numbers.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>