force-app/main/default/objects/OW_task_information__c/fields/OW_specific_user__c.field-meta.xml
<CustomField>
    <fullName>OW_specific_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field in which a specific user can be identified for a given task information record.</description>
    <label>Specific user</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User must be active.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Task_Information</relationshipName>
    <type>Lookup</type>
</CustomField>