force-app/main/default/objects/OW_task_information__c/fields/OW_stage__c.field-meta.xml
<CustomField>
    <fullName>OW_stage__c</fullName>
    <description>The stage of the advice process that this task falls under.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OW_process_variant__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Nurturing</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Data Gathering</fullName>
            </value>
            <value>
                <fullName>Suitability</fullName>
            </value>
            <value>
                <fullName>Fulfilment</fullName>
            </value>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>Unactioned</fullName>
            </value>
            <value>
                <fullName>Gather information</fullName>
            </value>
            <value>
                <fullName>Broker mortgage</fullName>
            </value>
            <value>
                <fullName>Await completion</fullName>
            </value>
            <value>
                <fullName>Mortgage complete</fullName>
            </value>
            <value>
                <fullName>Applying for DIP</fullName>
            </value>
            <value>
                <fullName>DIP granted</fullName>
            </value>
            <value>
                <fullName>Agree product</fullName>
            </value>
            <value>
                <fullName>Provide advice</fullName>
            </value>
            <value>
                <fullName>Applying for mortgage</fullName>
            </value>
            <value>
                <fullName>Mortgage offered</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>