force-app/main/default/objects/OW_task_information__c/fields/OW_subject__c.field-meta.xml
<CustomField>
    <fullName>OW_subject__c</fullName>
    <description>The subject of the task created from this template.</description>
    <inlineHelpText>What subject do you want to be set for any tasks of this type?</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>