force-app/main/default/objects/OW_task_information__c/fields/OW_task_description__c.field-meta.xml
<CustomField>
    <fullName>OW_task_description__c</fullName>
    <description>This is the description of how to complete this task.</description>
    <label>Task description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>