force-app/main/default/objects/OW_task_information__c/fields/OW_task_description_google_doc_link__c.field-meta.xml
<CustomField>
    <fullName>OW_task_description_google_doc_link__c</fullName>
    <description>Stores the link to the Google Doc where the task description is mastered.</description>
    <label>Task description Google Doc link</label>
    <type>Url</type>
</CustomField>