force-app/main/default/objects/OW_task_information__c/fields/OW_task_type__c.field-meta.xml
<CustomField>
    <fullName>OW_task_type__c</fullName>
    <description>A code that will identify the type of task this task information record represents.</description>
    <label>Task type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>