force-app/main/default/objects/OW_task_information__c/fields/OW_team__c.field-meta.xml
<CustomField>
    <fullName>OW_team__c</fullName>
    <description>Used to capture the team that looks after this task.</description>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business operations</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Mortgages</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Planners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>