force-app/main/default/objects/OW_task_information__c/fields/OW_triggered_by__c.field-meta.xml
<CustomField>
    <fullName>OW_triggered_by__c</fullName>
    <description>The trigger that causes this task to be completed (eg completion of a process street checklist, tickbox being checked)</description>
    <inlineHelpText>A text description of what triggers this task.</inlineHelpText>
    <label>Triggered by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>