force-app/main/default/objects/OW_task_information__c/fields/OW_turnaround_time__c.field-meta.xml
<CustomField>
    <fullName>OW_turnaround_time__c</fullName>
    <description>The number of business days prior to the task due date that the target start date will be set for any tasks created using this template.</description>
    <inlineHelpText>How many business days before the task due date should the target start date be set? Use 0 to have the target start date equal the due date, 1 for it to be the business day before etc.</inlineHelpText>
    <label>Turnaround time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>