force-app/main/default/objects/OW_task_information__c/fields/Task_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Record_Type__c</fullName>
    <label>Task record type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Type</valueSetName>
    </valueSet>
</CustomField>