force-app/main/default/objects/OW_task_information__c/fields/TriggeredByTask__c.field-meta.xml
<CustomField>
    <fullName>TriggeredByTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Drives the configurable automation of tasks triggering tasks. When a task is completed, it will check this relationship for tasks that are children of the one being completed. If any are found, they&#39;ll be created.</description>
    <inlineHelpText>If you specify a task here, the completion of that type of task will trigger the creation of this task.</inlineHelpText>
    <label>Triggered By</label>
    <referenceTo>OW_task_information__c</referenceTo>
    <relationshipLabel>Task Information</relationshipLabel>
    <relationshipName>TaskInformationTriggers</relationshipName>
    <type>Lookup</type>
</CustomField>