force-app/main/default/objects/OW_task_information__c/validationRules/dueDateOffsetRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>dueDateOffsetRequired</fullName>
    <active>true</active>
    <description>Ensures that a due date offset for the task template is specified where this is an active record.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
NOT(ISBLANK( OW_task_type__c ))

&amp;&amp;

ISPICKVAL( OW_status__c, &quot;Active&quot; ) 

&amp;&amp; 

ISBLANK( OW_due_date_offset__c )</errorConditionFormula>
    <errorDisplayField>OW_due_date_offset__c</errorDisplayField>
    <errorMessage>Please specify a due date offset</errorMessage>
</ValidationRule>