force-app/main/default/objects/OW_task_information__c/validationRules/OW_assigned_to_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_assigned_to_required</fullName>
    <active>true</active>
    <description>Ensures that an assigned to value is given.</description>
    <errorConditionFormula>NOT(ISBLANK( OW_task_type__c ))

&amp;&amp;

ISPICKVAL( OW_status__c, &quot;Active&quot; ) 

&amp;&amp; 

(ISPICKVAL( OW_assigned_to__c, &quot;&quot;  ))</errorConditionFormula>
    <errorDisplayField>OW_assigned_to__c</errorDisplayField>
    <errorMessage>Please give an assigned to value</errorMessage>
</ValidationRule>