force-app/main/default/objects/OW_task_information__c/validationRules/OW_team_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_team_required</fullName>
    <active>true</active>
    <description>Ensures that a team is specified where this is an active record.</description>
    <errorConditionFormula>NOT(ISBLANK( OW_task_type__c ))

&amp;&amp;

ISPICKVAL( OW_status__c, &quot;Active&quot; ) 

&amp;&amp; 

ISPICKVAL( OW_team__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>OW_team__c</errorDisplayField>
    <errorMessage>Please specify a team</errorMessage>
</ValidationRule>