force-app/main/default/objects/OW_task_information__c/validationRules/priorityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>priorityRequired</fullName>
    <active>true</active>
    <description>Ensures that a priority for the task template is specified where this is an active record.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
NOT(ISBLANK( OW_task_type__c ))

&amp;&amp;

ISPICKVAL( OW_status__c, &quot;Active&quot; ) 

&amp;&amp; 

ISPICKVAL( OW_priority__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>OW_priority__c</errorDisplayField>
    <errorMessage>Please specify a priority</errorMessage>
</ValidationRule>