force-app/main/default/objects/OW_task_information__c/validationRules/queueRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>queueRequired</fullName>
    <active>true</active>
    <description>Ensures that a queue is specified where queue assignment type is used.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
(ISPICKVAL( OW_assigned_to__c, &quot;Queue&quot; ))

&amp;&amp; 

(ISPICKVAL( OW_queue__c, &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>OW_queue__c</errorDisplayField>
    <errorMessage>Please choose which queue tasks of this type should be assigned to.</errorMessage>
</ValidationRule>