force-app/main/default/objects/OW_task_information__c/validationRules/specificAssignmentNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>specificAssignmentNotAllowed</fullName>
    <active>true</active>
    <description>Ensures that a queue or specific user are not specified for certain assigned to types.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
(ISPICKVAL( OW_assigned_to__c, &quot;Household team&quot; )
||
ISPICKVAL( OW_assigned_to__c, &quot;Partner&quot; ))
&amp;&amp; 
(NOT(ISBLANK(OW_specific_user__c))
||
NOT(ISPICKVAL(OW_queue__c, &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>OW_assigned_to__c</errorDisplayField>
    <errorMessage>Where assigned to is household team or partner,  you cannot choose a queue or specific user.</errorMessage>
</ValidationRule>