force-app/main/default/objects/OW_task_information__c/validationRules/specificUserRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>specificUserRequired</fullName>
    <active>true</active>
    <description>Ensures that a specific user is specified where specific user assignment type is used.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
(ISPICKVAL( OW_assigned_to__c, &quot;Specific user&quot; ))

&amp;&amp; 

ISBLANK(  OW_specific_user__c )</errorConditionFormula>
    <errorDisplayField>OW_specific_user__c</errorDisplayField>
    <errorMessage>Please choose a specific user.</errorMessage>
</ValidationRule>