force-app/main/default/objects/OW_task_information__c/validationRules/stageRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>stageRequired</fullName>
    <active>true</active>
    <description>Ensures that a stage is specified where this is an active record.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
NOT(ISBLANK( OW_task_type__c ))

&amp;&amp;

ISPICKVAL( OW_status__c, &quot;Active&quot; ) 

&amp;&amp; 

ISPICKVAL( OW_stage__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>OW_stage__c</errorDisplayField>
    <errorMessage>Please specify a stage</errorMessage>
</ValidationRule>