force-app/main/default/objects/OW_task_information__c/validationRules/subjectRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>subjectRequired</fullName>
    <active>true</active>
    <description>Ensures that a subject for the task template is specified where this is an active record.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
NOT(ISBLANK( OW_task_type__c ))

&amp;&amp;

ISPICKVAL( OW_status__c, &quot;Active&quot; ) 

&amp;&amp; 

ISBLANK( OW_subject__c )</errorConditionFormula>
    <errorDisplayField>OW_subject__c</errorDisplayField>
    <errorMessage>Please specify a subject</errorMessage>
</ValidationRule>