force-app/main/default/objects/OW_task_information__c/validationRules/turnaroundTimeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>turnaroundTimeRequired</fullName>
    <active>true</active>
    <description>Ensures that a turnaround time for the task template is specified where this is an active record.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
NOT(ISBLANK( OW_task_type__c ))

&amp;&amp;

ISPICKVAL( OW_status__c, &quot;Active&quot; ) 

&amp;&amp; 

ISBLANK( OW_turnaround_time__c )</errorConditionFormula>
    <errorDisplayField>OW_turnaround_time__c</errorDisplayField>
    <errorMessage>Please specify a turnaround time</errorMessage>
</ValidationRule>