force-app/main/default/objects/OW_task_information__c/listViews/AdviceWithdrawal.listView-meta.xml
<ListView>
    <fullName>AdviceWithdrawal</fullName>
    <columns>NAME</columns>
    <columns>OW_task_type__c</columns>
    <columns>OW_assigned_to__c</columns>
    <columns>OW_queue__c</columns>
    <columns>OW_status__c</columns>
    <columns>OW_sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OW_task_type__c</field>
        <operation>startsWith</operation>
        <value>ADVICE_WITHDRAWAL_</value>
    </filters>
    <label>Advice | Withdrawal</label>
</ListView>