force-app/main/default/objects/OW_task_information__c/listViews/OW_mortgage_tasks.listView-meta.xml
<ListView>
    <fullName>OW_mortgage_tasks</fullName>
    <columns>NAME</columns>
    <columns>OW_process_variant__c</columns>
    <columns>OW_stage__c</columns>
    <columns>OW_triggered_by__c</columns>
    <columns>OW_location__c</columns>
    <columns>OW_sequence__c</columns>
    <columns>OW_task_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OW_team__c</field>
        <operation>equals</operation>
        <value>Mortgages</value>
    </filters>
    <label>Mortgage tasks</label>
</ListView>