force-app/main/default/objects/OW_task_information__c/listViews/OW_specialist_tasks.listView-meta.xml
<ListView>
    <fullName>OW_specialist_tasks</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>OW_subject__c</columns>
    <columns>OW_triggered_by__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OW_team__c</field>
        <operation>equals</operation>
        <value>Operations</value>
    </filters>
    <label>Specialist tasks</label>
</ListView>