force-app/main/default/objects/OW_task_information__c/listViews/PartnerTasks.listView-meta.xml
<ListView>
    <fullName>PartnerTasks</fullName>
    <columns>NAME</columns>
    <columns>OW_subject__c</columns>
    <columns>OW_priority__c</columns>
    <columns>OW_assigned_to__c</columns>
    <columns>OW_queue__c</columns>
    <columns>OW_process_variant__c</columns>
    <columns>OW_stage__c</columns>
    <columns>OW_task_credit__c</columns>
    <columns>OW_task_type__c</columns>
    <columns>OW_sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OW_team__c</field>
        <operation>equals</operation>
        <value>Partners</value>
    </filters>
    <filters>
        <field>OW_status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Partner Tasks</label>
</ListView>